After users login, they can redirect to the main restaurant view and choose the layout they want to visit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,20 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps2">Map</string>
+    <string name="reserve">Reserve</string>
+    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
+    <string name="image_for_app">Image for app</string>
+    <string name="_0">0</string>
+    <string name="time">10:00am</string>
+    <string name="reservation_for">Reservation For</string>
+    <string name="Date">Date</string>
+    <string name="People_Label">People</string>
+    <string name="Time_Label">Time</string>
+    <string name="TimeReservation">Time</string>
+    <string name="time_entry">10:00</string>
+    <string name="browse_restaurants">Browse Restaurants</string>
+    <string name="bookingHist">Booking History</string>
+    <string name="resProfile">Profile</string>
+    <string name="people">People</string>
+    <string name="textview">TextView</string>
 </resources>
